@@ -1,3 +1,6 @@
+2021-06-13 Dusan Jocic <dusanjocic@msn.com>
+	* [Renderer] Fixed blended of texture detail.
+
 2021-06-06 Dusan Jocic <dusanjocic@msn.com>
 	* [Misc] Misc changes
 
